@@ -1,5 +1,8 @@
 In the name of God
 
+[2017-11-13]
+- Add DotNetProxy library as a new way of changing the keyboard layout. (Previous method was broken in some update of Windows.)
+
 [2017-11-02]
 - Add PotPlayer keys fix (for Dvorak remap).
 
